# pkgman

./: CMakeLists.txt  LICENSE.txt  README.md
data/: make-PKGBUILD
src/: main.cpp
src/fmt/: CMakeLists.txt  Delimiter.cpp  Delimiter.hpp  TimeUtils.cpp  TimeUtils.hpp  Timestamp.cpp  Timestamp.hpp
src/log/: CMakeLists.txt  Logger.cpp  Logger.hpp
src/pkg/: CMakeLists.txt  Package.cpp  Package.hpp  PackageFileParser.cpp  PackageFileParser.hpp
